second :deploy workflow

--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -1,13 +1,14 @@
-.nav{
-    position: fixed;
-    width: 100%;
-    z-index: 9;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    margin-top: 30px;
-    &__list{
+    .nav{
+        position: fixed;
+        width: 100%;
+        z-index: 9;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: fixed;
+        margin-top: 30px;
+    }
+    .nav__list{
         display: flex;
         justify-content: center;
         gap: 50px;
@@ -16,27 +17,21 @@
         background:radial-gradient(#f3f6ff,  #e7e7e7 150%) ;
         border: 1px solid f3f6ff;
         box-shadow: rgba(120, 120, 121, 0.789) 0px 6px 11px, rgba(17, 17, 26, 0.1) 0px 6px 35px, rgba(17, 17, 26, 0.1) 0px 14px 50px;
-        
+    }
 
-        &--li{
+      .nav__list--li{
             cursor: pointer;
             color: black;
             padding: 10px 20px;
             border-radius: 999px;
-
-    
         }
-        &--li:hover{
+        .nav__list--li:hover{
             color: white;
-
             padding: 10px 20px;
             background: linear-gradient(-45deg, rgba(12, 69, 118, 0.967) 0%, rgb(2, 126, 154) 25%,rgb(18, 63, 126) 51%, rgb(3, 3, 120) 100%);
-
-
-    
         }
-    }
+    
    
-}
+
 
 
