--- a/src/Components/SectionFiles/SectionProjects.css
+++ b/src/Components/SectionFiles/SectionProjects.css
@@ -4,7 +4,7 @@ justify-content: center;
 align-items: center;
 margin:0 auto 50px auto;
 max-width: 400px;
-width: 100%;
+width: 81%;
 color: white;
 border-radius: 1.5rem;
 padding: 12px 20px;
@@ -13,15 +13,19 @@ box-shadow: rgba(120, 120, 121, 0.789) 0px 6px 11px, rgba(17, 17, 26, 0.1) 0px 6
 background: linear-gradient(-45deg, rgba(43, 85, 122, 0.967) 0%, rgb(2, 126, 154) 25%,rgb(21, 71, 140) 51%, rgb(108, 108, 223) 100%);
 }
 #projets{
-   
   padding-top: 10rem;
 }
 .gallery{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr); 
-    justify-items: center; 
-row-gap: 50px;
-}
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 30px;
+    margin-inline: 30px;
+
+  }
+
+
+
 
 
 
