--- a/src/Components/workComponent.css
+++ b/src/Components/workComponent.css
@@ -1,22 +1,26 @@
 .workPage{
+    max-width: 950px;
+    width: 100%;
+    margin-inline:  auto;
+}
+.block-work{
+    margin-inline: 20px;
     display: flex;
     flex-direction: column;
-     /* align-items: center; */
     justify-content: center;
     gap: 40px;
-    padding: 100px;
     color: white;
     position: relative;
+    margin-bottom: 50px;
 }
 
 .workImage{
-    max-width: 900px;
-    max-height: 450px;
+    width: 100%;
+    max-height: 500px;
     height: 100%;
     border-radius: 1.5rem;
     object-fit: cover;
     object-position: top;
-
 }
 .buttonRetoure{
     cursor: pointer;
@@ -25,11 +29,50 @@
     padding: 12px 20px;
     background: linear-gradient(-45deg, rgba(43, 85, 122, 0.967) 0%, rgb(2, 126, 154) 25%, rgb(21, 71, 140) 51%, rgb(108, 108, 223) 100%);
     border: 1px solid transparent;
-    font-size: large;
-    font-weight: 600;
+    font-size: 22px;
+    margin-top: 5rem;
 }
 .buttonRetoure:hover{
     box-shadow: rgba(120, 120, 121, 0.789) 0px 6px 11px, rgba(17, 17, 26, 0.1) 0px 6px 35px, rgba(17, 17, 26, 0.1) 0px 14px 50px;
-
 }
-
+.tags{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+.tag{
+    border-radius: 0.5rem;
+    padding: 12px 20px;
+    box-shadow: rgba(120, 120, 121, 0.789) 0px 6px 11px, rgba(17, 17, 26, 0.1) 0px 6px 35px, rgba(17, 17, 26, 0.1) 0px 14px 50px;
+    background: linear-gradient(-45deg, rgba(0, 132, 247, 0.967) 0%, rgb(2, 126, 154) 25%, rgb(33, 78, 142) 51%, rgb(108, 108, 223) 100%);
+}
+.titleImage{
+text-align: center;
+} 
+@media  (max-width: 768px) {
+    .buttonRetoure{
+        padding: 10px 18px;
+        font-size: 18px;
+    } 
+    .tag{
+        padding: 10px 18px;
+        font-size: 18px;
+    }
+    .titleImage{
+        font-size: 22px;
+    } 
+}
+@media  (max-width:500px) {
+    
+    .buttonRetoure{
+        padding: 8px 16px;
+        font-size: 16px;
+    }
+    .tag{
+        padding: 8px 16px;
+        font-size: 16px;
+    }
+    .titleImage{
+        font-size: 20px;
+    } 
+}
