--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,15 @@ box-sizing: border-box;
 text-decoration: none;
 list-style: none;
 font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+font-weight: 500;
+
 }
 main{
     max-width: 1440px;
     width: 100%;
-    margin: auto;
+    margin-inline: auto;
+    
+    
 }
 body{
     background-size: 300% 300%;
