deploy : last commit

--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -12,20 +12,20 @@
         justify-content: center;
         gap: 50px;
         padding: 20px 20px;
-        border-radius: 999px;
+        border-radius: var(--borderRadiusLarge);
         background:radial-gradient(#f3f6ff,  #e7e7e7 150%) ;
         box-shadow: rgba(120, 120, 121, 0.789) 0px 6px 11px, rgba(17, 17, 26, 0.1) 0px 6px 35px, rgba(17, 17, 26, 0.1) 0px 14px 50px;
     }
 
-      .nav__list--li{
+        .nav__list--li{
             cursor: pointer;
-            color: black;
+            color: var(--blackColor);
             padding: 10px 20px;
             
         }
         .nav__list--li:hover{
-            color: white;
-            border-radius: 999px;
+            color: var(--whiteColor);
+            border-radius: var(--borderRadiusLarge);
             padding: 10px 20px;
             background: linear-gradient(-45deg, rgba(12, 69, 118, 0.967) 0%, rgb(2, 126, 154) 25%,rgb(18, 63, 126) 51%, rgb(3, 3, 120) 100%);
         }
@@ -35,19 +35,18 @@
                 width: 100%;
                 margin: 0;
                 padding: 0;
-             
             }
             .nav__list{
                 width: 100%;
                 border-radius:0 ;
-                color: black;
+                color: var(--blackColor);
                 padding: 10px 0;
                 gap: 0;
                 font-weight: 300;
            }
            .nav__list--li:hover{
-                color: white;
-                border-radius: 999px;
+                color:var(--whiteColor);
+                border-radius:var(--borderRadiusLarge);
                 border-radius: 0;
                 padding: 10px 13px;
             }
@@ -55,19 +54,19 @@
         } 
         @media  (max-width: 382px) {
             .nav__list{
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            grid-template-rows: 1fr 1fr; 
-            padding: 0; 
+                display: grid;
+                grid-template-columns: 1fr 1fr;
+                grid-template-rows: 1fr 1fr; 
+                padding: 0; 
            }
            .nav__list--li{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 10px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                padding: 10px;
             }
             .nav__list--li:hover{
-            padding: 10px;
+                padding: 10px;
             }
         }
 
