--- a/src/Components/workComponent.css
+++ b/src/Components/workComponent.css
@@ -9,7 +9,7 @@
     flex-direction: column;
     justify-content: center;
     gap: 40px;
-    color: white;
+    color:var(--whiteColor);
     position: relative;
     margin-bottom: 50px;
 }
@@ -18,14 +18,14 @@
     width: 100%;
     max-height: 500px;
     height: 100%;
-    border-radius: 1.5rem;
+    border-radius: var(--borderRadiusMedium);
     object-fit: cover;
     object-position: top;
 }
 .buttonRetoure{
     cursor: pointer;
-    color: white;
-    border-radius: 1.5rem;
+    color:var(--whiteColor);
+    border-radius: var(--borderRadiusMedium);
     padding: 12px 20px;
     background: linear-gradient(-45deg, rgba(43, 85, 122, 0.967) 0%, rgb(2, 126, 154) 25%, rgb(21, 71, 140) 51%, rgb(108, 108, 223) 100%);
     border: 1px solid transparent;
@@ -41,7 +41,7 @@
     gap: 20px;
 }
 .tag{
-    border-radius: 0.5rem;
+    border-radius: var(--borderRadiusSmall);
     padding: 12px 20px;
     box-shadow: rgba(120, 120, 121, 0.789) 0px 6px 11px, rgba(17, 17, 26, 0.1) 0px 6px 35px, rgba(17, 17, 26, 0.1) 0px 14px 50px;
     background: linear-gradient(-45deg, rgba(0, 132, 247, 0.967) 0%, rgb(2, 126, 154) 25%, rgb(33, 78, 142) 51%, rgb(108, 108, 223) 100%);
