--- a/src/Components/SectionFiles/Cards.css
+++ b/src/Components/SectionFiles/Cards.css
@@ -14,7 +14,7 @@
     content: "";
     position: absolute;
     inset: 0;
-    border: 3px solid white;
+    border: 3px solid var(--whiteColor);
     border-radius: inherit;
     opacity: 0;
     transition: 0.4ms ease-in-out;
@@ -43,14 +43,14 @@
 }
 .card:hover .content h2 {
     opacity: 1;
-    color: white;
+    color:var(--whiteColor);
     
 }
 .card .image-box  {
     width: 100%;
     height: 100%;
     transition: 0.5s ease-in-out;
-    border-radius: 1.5rem;
+    border-radius:var(--borderRadiusMedium);
 }
 .image-projet{
     width: 100%;
