--- a/src/Components/SectionFiles/SectionProjects.css
+++ b/src/Components/SectionFiles/SectionProjects.css
@@ -5,8 +5,8 @@ align-items: center;
 margin:0 auto 50px auto;
 max-width: 400px;
 width: 81%;
-color: white;
-border-radius: 0.5rem;
+color: var(--whiteColor);
+border-radius: var(--borderRadiusSmall);
 padding: 12px 20px;
 box-shadow: rgba(120, 120, 121, 0.789) 0px 6px 11px, rgba(17, 17, 26, 0.1) 0px 6px 35px, rgba(17, 17, 26, 0.1) 0px 14px 50px;
 
@@ -21,8 +21,6 @@ background: linear-gradient(-45deg, rgba(43, 85, 122, 0.967) 0%, rgb(2, 126, 154
     justify-content: center;
     gap: 30px;
     margin-inline: 30px;
-    
-
   }
 
 
